@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 00-09-00
 
 Author(s) : Juergen Knoedlseder
 
-13 March 2014
+12 June 2014
 
 
 1. Introduction
@@ -87,7 +87,10 @@ None
 
 12. Sky module
 --------------
-None
+Addition and subtraction unary operators have been added to GSkymap that
+allow adding or subtracing skymaps. Values in the right-hand side skymap
+are bi-linearily interpolated, allowing for reprojection or rebinning of
+skymaps.
 
 
 13. Support module
