@@ -1,10 +1,11 @@
-2014-03-13  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2014-06-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 0.9.0 released
         ========================
 
         Add energy dispersion to CTA module
         Add pointing table support to CTA module
+        Add += and -= operators to GSkymap
 
 
 2014-03-12  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
